--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -122,9 +122,9 @@ The version 2.0 Hydra board comes with all the surface mount components installe
   * 2 DC-DC converter modules, one +5v, one +/- 12v
   * 3 3 point screw terminals
   * 6 2 point screw terminals
-  * 4 2-64 1/2" bolts
+  * 4 2-56 1/2" bolts
   * 4 #4 1/4" standoffs
-  * 4 2-64 nuts
+  * 4 2-56 nuts
 
 Start by installing the two DC-DC converters. The +5 volt one will have one less pin than the +/- 12 volt one. The +5 volt one goes nearest the 4.7 uF tantalum capacitor, and the +/- 12 volt one goes nearest the 8 pin OP amp SOIC. The two converters must be mounted on the *same* side of the board as the SMD components.
 
@@ -140,7 +140,7 @@ Install the 6 pin FTDI header. It goes on the *opposite* side of the board as th
 
 Install the trimmer pot. It goes on the *opposite* side of the board as the SMD components.
 
-Lastly, install the LCD (this step *must* be last, as the LCD will cover some of the solder pads used to install the other through-hole parts). To do so, set the board on a flat surface, component-side down. Install the 18 pin SIP header, but do not solder it. Lay the LCD module on top with the SIP header mating with the interface on the module. Again, do not solder yet. Thread the 2-64 bolts through the for holes in the corner of the LCD. Place a standoff in each corner between the logic board and the LCD module and push the bolt through and thread a nut on the bottom. Tighten (but do not over tighten) each nut. When the module is physically secured in place, solder the SIP header both on the LCD module and on the logic board.
+Lastly, install the LCD (this step *must* be last, as the LCD will cover some of the solder pads used to install the other through-hole parts). To do so, set the board on a flat surface, component-side down. Install the 18 pin SIP header, but do not solder it. Lay the LCD module on top with the SIP header mating with the interface on the module. Again, do not solder yet. Thread the 2-56 bolts through the for holes in the corner of the LCD. Place a standoff in each corner between the logic board and the LCD module and push the bolt through and thread a nut on the bottom. Tighten (but do not over tighten) each nut. When the module is physically secured in place, solder the SIP header both on the LCD module and on the logic board.
 
 Temporarily connect a 12 volt power supply to the power terminals and adjust the contrast knob so that the text looks its best.
 
@@ -157,6 +157,9 @@ If you change the values of R14 or R17 and/or the CT, then you must change the C
 Divide Rb by Te to get volts per amp. Divide that value by (5/1024) to get units per amp. Divide 1000 by units per amp to get milliamps per unit, which is the value of CURRENT_SCALE_FACTOR.
 
 = Chassis construction =
+
+[http://www.kfu.com/~nsayer/hydra/hydra_wiring.png]
+Hydra wiring diagram
 
 You will need:
 
@@ -176,9 +179,7 @@ You can, of course, build your Hydra however you like, but the formula that work
 
 On the WC-40, pick one of the short sides to be the "top." In the middle of this side, drill a 5/8" hole for the mode button. On the opposite short side, drill a 1 5/8" hole 1 3/8" down from the upper edge of the box (not counting the lid). Insert and center the inlet, then mark the four 1/8" holes in the corners. Once drilled, use 1/2" 6-32 bolts, nuts and lock washers to install the inlet. On the two long sides, drill a 1 1/8" hole centered on the lower "half" of the side (that is, between the short side with the inlet hole and the "rib" that runs up from the back at the center of the long side). Those two holes will be for the CG-16 cable glands. If you're using v1.6, use a Dremel and knock off the two panel supports nearest the button hole, but NOT the ones with the threaded inserts. Those two panel supports will eventually collide with the standoffs for the LCD panel we are going to install.
 
-On the WX-42 panel, use the LCD and main board as templates to mark the mounting holes. If you're using v1.6, you want the LCD near, but not at, the top of the panel, and the main board 1/4" below it. If you're using v2.0, then you just want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and in the remaining space, mark the mounting hole for the power distribution bus module and the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board.
-
-For v1.6, Use 4 2" 4-40 M-F nylon hex standoffs for the display and 4 1-3/8" metal 4-40 M-F hex standoffs for the main board. For v2.0, use 4 2" 4-40 M-F hex standoffs.
+On the WX-42 panel, use the LCD and main board as templates to mark the mounting holes. If you're using v1.6, you want the LCD near, but not at, the top of the panel, and the main board 1/4" below it. If you're using v2.0, then you just want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and in the remaining space, mark the mounting hole for the power distribution bus module and the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board. Use 4 2" 4-40 M-F hex standoffs to hold the logic board over the power supply.
 
 Use 4 1/2" 6-32 bolts, nuts and lock washers to secure the relays. Be sure to orient the relays so that the coil tabs are nearest the logic board.
 
@@ -248,11 +249,9 @@ The relay outputs are fed from fairly standard open collector circuits (R2 & Q1;
 
 == Controller ==
 
-The controller is fused for external crystal timing, and a 16 MHz crystal is chosen to be compatible with the Arduino IDE. The ISP programming pins (including /RESET) are connected to an ISP header. Those pins are not shared with other functions. The i2c bus is brought out to a 4 pin header for an LCD and the async serial pins are brought out to an FTDI connector. DTR on the FTDI connector is connected to /RESET through a capacitor so that DTR transitions can reset the CPU. If you load an Arduino style bootloader, then programming can be done with an FTDI cable instead of an ISP cable. Alternatively, since 5 volts is supplied to the FTDI cable, it can power external serially connected devices.
+The controller is fused for external crystal timing, and a 16 MHz crystal is chosen to be compatible with the Arduino IDE. The ISP programming pins (including /RESET) are connected to an ISP header. Those pins are not shared with other functions. The i2c bus is connected to an i2c GPIO chip wired to the LCD display. The async serial pins are brought out to an FTDI connector. DTR on the FTDI connector is connected to /RESET through a capacitor so that DTR transitions can reset the CPU if the DTR_RES jumper is closed. If you load an Arduino style bootloader, then programming can be done with an FTDI cable instead of an ISP cable. Alternatively, since 5 volts is supplied to the FTDI cable, it can power external serially connected devices.
 
-Version 2.0 of the Hydra board includes an MCP23017 i2c GPIO chip to drive the on-board LCD. The connections from the chip to the LCD are the same as the OpenEVSE backpack display and the AdaFruit RGB LCD shield, except that only the SELECT button is actually brought out to a connector.
-
-The inlet's AC power is connected to an off-board AC-to-DC converter module which outputs 12 volts. DC-DC converter DC2 converts this into 5 volts for the controller and the rest of the logic system.
+DC-DC converter DC2 converts the incoming 12 volt power into 5 volts for the controller and the rest of the logic system.
 
 = Images =
 
@@ -262,12 +261,12 @@ The 2.0 board fully assembled, back view.
 [http://www.kfu.com/~nsayer/hydra/hydra-20-front.jpg]
 The 2.0 board fully assembled, top view.
 
-The connectors, right side, top to bottom: proximity, pilot, ground
+The connectors, right side, top to bottom:
   * Relay for car B
-  * J1772 for car B - top to bottom: 
+  * J1772 for car B - top to bottom:  proximity, pilot, ground
   * Current transformer for car B
 
-The bottom, right to left:
+The bottom, left to right:
   * LCD contrast knob
   * SELECT switch connector
   * power switch (just below the SELECT switch)
