--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -125,9 +125,9 @@ The version 2.0 Hydra board comes with all the surface mount components installe
   * 2 DC-DC converter modules, one +5v, one +/- 12v
   * 3 3 point screw terminals
   * 6 2 point screw terminals
-  * 4 2-56 1/2" bolts
-  * 4 #4 1/4" standoffs
-  * 4 2-56 nuts
+  * 4 2-56 1/2" nylon bolts
+  * 4 #4 1/4" plastic standoffs
+  * 4 2-56 nylon nuts
 
 Start by installing the two DC-DC converters. The +5 volt one will have one less pin than the +/- 12 volt one. The +5 volt one goes nearest the 4.7 uF tantalum capacitor, and the +/- 12 volt one goes nearest the 8 pin OP amp SOIC. The two converters must be mounted on the *same* side of the board as the SMD components.
 
@@ -177,23 +177,23 @@ The "quick kit" is $90. The chassis BOM  is around $100 + tax and shipping. A J1
 
 You can, of course, build your Hydra however you like, but the formula that works best for me goes something like this:
 
-On the WC-40, pick one of the short sides to be the "top." In the middle of this side, drill a 5/8" hole for the mode button. On the opposite short side, drill a 1 5/8" hole 1 3/8" down from the upper edge of the box (not counting the lid). Insert and center the inlet, then mark the four 1/8" holes in the corners. Once drilled, use 1/2" 6-32 bolts, nuts and lock washers to install the inlet. On the two long sides, drill a 1 1/8" hole centered on the lower "half" of the side (that is, between the short side with the inlet hole and the "rib" that runs up from the back at the center of the long side). Those two holes will be for the CG-16 cable glands. If you're using v1.6, use a Dremel and knock off the two panel supports nearest the button hole, but NOT the ones with the threaded inserts. Those two panel supports will eventually collide with the standoffs for the LCD panel we are going to install.
+On the WC-40, pick one of the short sides to be the "top." In the middle of this side, drill a 5/8" hole for the mode button. On the opposite short side, drill a 1 5/8" hole 1 3/8" down from the upper edge of the box (not counting the lid). Insert and center the inlet, then mark the four 1/8" holes in the corners. Once drilled, use 1/2" 6-32 bolts, nuts and lock washers to install the inlet. On the two long sides, drill a 1 1/8" hole centered on the lower "half" of the side (that is, between the short side with the inlet hole and the "rib" that runs up from the back at the center of the long side). Those two holes will be for the CG-16 cable glands.
 
-On the WX-42 panel, use the LCD and main board as templates to mark the mounting holes. If you're using v1.6, you want the LCD near, but not at, the top of the panel, and the main board 1/4" below it. If you're using v2.0, then you just want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and in the remaining space, mark the mounting hole for the power distribution bus module and the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board. Use 4 2" 4-40 M-F hex standoffs to hold the logic board over the power supply.
+On the WX-42 panel, use the main board as a template to mark the mounting holes. You want to center the board as best as you can. A half inch below the bottom of the board, center the two relays, and in the remaining space, mark the mounting hole for the power distribution bus module and the ground bar. Once you've marked the location for the main board, mark the two holes for the power supply module centered in the middle - the power supply will be mounted under the main board. Use 4 2" 4-40 M-F hex standoffs to hold the logic board over the power supply. Make sure you leave enough space for the mode button (if you're going to use one) - if the power supply is too close to the top the button may hit it and not fit properly.
 
 Use 4 1/2" 6-32 bolts, nuts and lock washers to secure the relays. Be sure to orient the relays so that the coil tabs are nearest the logic board.
 
-Use 2 3/4" 6-32 bolts, nuts and lock washers to secure the power distribution bus module.
+Use 2 3/4" 6-32 bolts, nuts and lock washers to secure the power distribution bus module. Positioning the bus module is an exercise in compromise. Generally the inlet wires are 6 or 8 gauge, which makes them very stiff and difficult to bend. At the same time, you must insure that the module doesn't get in the way of either the inlet or the plug cables and/or cable glands.
 
 Use the self-tapping screw supplied with the ground bus to secure it.
 
-Cut the inlet hot and ground wires to length and install the two hot wires in each side of the power distribution bus module and the ground wire into the ground bus.
-
-Cut four short (around 4 inches or so) #10 wires - two red, two black. Attach a QD female connector to each end of each wire. Connect a red and a black to each relay on the "line" side. Connect the other end of each red wire to the "red" side of the power distribution bus module. Connect the free end of the black wires to the other side. Cut a 22 gauge red and black wire approximately 8 inches long. Attach a QD terminal to one end of each and twist them together in a loose braid. Connect the QD terminals to the power distribution bus module, matching the colors of the wires already there. Attach the other ends to the AC inputs of the power supply module (make *sure* you are connecting them to the AC side!). Cut two more red and black 22 gauge wires approximately 4 inches long and make another braid. Connect one end of each wire to the DC outputs of the power supply, matching red to positive, black to negative. Connect the other end of each to the power input terminal block on the main board, matching black to ground and red to the positive terminal.
+Cut four short (around 4 inches or so) #10 wires - two red, two black. Attach a QD female connector to each end of each wire. Connect a red and a black to each relay on the "line" side (this is an arbitrary choice, but should be consistent). Connect the other end of each red wire to the "red" side of the power distribution bus module. Connect the free end of the black wires to the other side. Cut a 22 gauge red and black wire approximately 8 inches long. Attach a QD terminal to one end of each and twist them together in a loose braid. Connect the QD terminals to the power distribution bus module, matching the colors of the wires already there. Attach the other ends to the AC inputs of the power supply module (make *sure* you are connecting them to the AC side!). Cut two more red and black 22 gauge wires approximately 4 inches long and make another braid. Connect one end of each wire to the DC outputs of the power supply, matching red to positive, black to negative. Connect the other end of each to the power input terminal block on the main board, matching black to ground and red to the positive terminal.
 
 Use 2 1-3/4" 4-40 bolts, nuts and lock washers to secure the power supply. Be sure to install the wires for the power supply *before* installing the main board - the power supply will be inaccessible later. Use a 4-40 nut and lock washer to secure each standoff and use a 1/4" 4-40 bolt to attach the main board to the standoffs.
 
-For v1.6, use four 1/2" 4-40 bolts to attach the LCD to its standoffs. Don't forget the spacers on each corner between the LCD and its backpack board. Before attaching the LCD, you'll probably want to attach the i2c and button cables.
+Now install the mounting plate in the chassis. You may find it easiest to remove the inlet first.
+
+Cut the inlet hot and ground wires to length and install the two hot wires in the "line" terminals on each side of the power distribution bus module and the ground wire into the ground bus.
 
 Run the proximity and pilot wire from the inlet to the logic board, Run a small wire from the inlet ground connector on the board to the ground bus.
 
@@ -249,7 +249,7 @@ The relay outputs are fed from fairly standard open collector circuits (R2 & Q1;
 
 == Controller ==
 
-The controller is fused for external crystal timing, and a 16 MHz crystal is chosen to be compatible with the Arduino IDE. The ISP programming pins (including /RESET) are connected to an ISP header. Those pins are not shared with other functions. The i2c bus is connected to an i2c GPIO chip wired to the LCD display. The async serial pins are brought out to an FTDI connector. DTR on the FTDI connector is connected to /RESET through a capacitor so that DTR transitions can reset the CPU if the DTR_RES jumper is closed. If you load an Arduino style bootloader, then programming can be done with an FTDI cable instead of an ISP cable. Alternatively, since 5 volts is supplied to the FTDI cable, it can power external serially connected devices.
+The controller is fused for external crystal timing, and a 16 MHz crystal is chosen to be compatible with the Arduino IDE. The ISP programming pins (including /RESET) are connected to an ISP header. Those pins are not shared with other functions. The i2c bus is connected to an i2c GPIO chip wired to the LCD display. The async serial pins are brought out to an FTDI connector. DTR on the FTDI connector is connected to /RESET through a capacitor and the DTR_RESET jumper so that DTR transitions can reset the CPU if the jumper is closed. If you load an Arduino style bootloader, then programming can be done with an FTDI cable instead of an ISP cable. Alternatively, since 5 volts is supplied to the FTDI cable, it can power external serially connected devices (about 100 mA of spare 5 volt capacity is available).
 
 DC-DC converter DC2 converts the incoming 12 volt power into 5 volts for the controller and the rest of the logic system.
 
