--- a/wiki/OpenEVSE_DIY_Plus_spec.wiki
+++ b/wiki/OpenEVSE_DIY_Plus_spec.wiki
@@ -24,7 +24,7 @@ http://open-evse.googlecode.com/files/DIY_OpenEVSE_PLUS.zip
 == BOM ==
 ||Part||Value||	Type||	Quantity||	Manufacture||	Part Number|| Marking ||
 ||Board||	||	Board||	1||	GoldPheonix||	Board|| ||
-||Power	12V||	||PS||	1||	MicroPowerDirect||	MPM-04E-1205|| ||
+||Power	12V||	||PS||	1||	MicroPowerDirect||	MPM-04D-1205|| ||
 ||DCDC||	D117E||	DC/DC converter||	1||	MicroPowerDirect||	D117E|| ||
 ||Fuse||	1A||	Fuse||	2||	Bel||	RST 1|| ||
 ||IC1||	328p||	Processor||	1||	Atmel||	ATMEGA328P-PU-ND|| ATMEGA328P-PU ||
